tests/paczka1/small_fuzzy/27599138.err
Error in line 1: LCO S219 8,1
Error in line 6: f7Pg S219 61,4
